syntax = "proto3";

option go_package = "pb";

service ESSProxy {
    rpc SendEmail (SendEmailRequest) returns (SendEmailReply) {}
}

message SendEmailRequest {
    AuthInfo auth = 1;
    string from_addr = 2;
    repeated string to_addrs = 3;
    string subject = 4;
    string body = 5;
}

message AuthInfo {
    string username = 1;
    string password = 2;
}

message SendEmailReply {
    string result = 1;
}
